# AutoTest

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  hice_aitisa_test.cpp
auto_test/: auto_test.h  basic.cpp  basic.h  sample.cpp  sample.h
auto_test/test_code/: activation_test.h  arg_reduce.h  batch_norm_test.h  binary_op_test.h  compare.h  conv_test.h  cross_entropy.h  ctc_loss.h  drop_out_test.h  elu.h  l1_loss.h  matmul_test.h  mse_loss.h  pooling_test.h  reduce.h  smooth_l1_loss.h  softmax_test.h  transpose.h  unary_expr.h
auto_test/test_code/aitisa_torch/: attention_test.h  rot90.h  transpose.h
auto_test/test_code/hice_torch/: arg_reduce.h  compare.h  cross_entropy.h  ctc_loss.h  elu.h  l1_loss.h  mse_loss.h  nll_loss.h  reduce.h  smooth_l1_loss.h  unary_expr.h
cmake/local/: LibConfig.cmake  LibTorch.cmake
cmake/public/: Utils.cmake
config/test/: test_data.cfg
hice-master/: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  gpu_run.slurm
hice-master/cmake/: Summary.cmake
hice-master/example/: CMakeLists.txt  benchmark.h  gpu_run.slurm  matmul.cpp  perf_test.cpp  plan_test.cpp  static_func.cpp  tvm_func_runner.cpp
hice-master/hice/: hice.h  hice_c.h
hice-master/test/: CMakeLists.txt
hice-master/test/api_c/: CMakeLists.txt  compile_test_c.c  ops_math_test_c.cpp  ops_nn_test_c.cpp
hice-master/test/basic/: CMakeLists.txt  copy_test.cpp  factories_test.cpp  reshape_test.cpp  resize_test.cpp  slice_test.cpp  split_test.cpp  transpose_test.cpp
hice-master/test/benchmark/: CMakeLists.txt  benchmark_cpu.h  benchmark_cuda.h  matmul_bench.cpp  spgemm_test.cpp  spmm_test.cpp  spmv_test.cpp
hice-master/test/core/: CMakeLists.txt  index_util_test.cpp  layout_test.cpp  layout_util_test.cpp  shape_test.cpp  shape_util_test.cpp  sparse_tensor_test.cpp  tensor_test.cpp  util_test.cpp
hice-master/test/math/: CMakeLists.txt  arg_reduce_dense_test.cpp  compare_test.cpp  eltwise_test.cpp  matmul_csr_test.cpp  matmul_sparse_test.cpp  matmul_test.cpp  reduce_test.cpp
hice-master/test/ml/: CMakeLists.txt  dataset_dense_test.cpp  knn_dense_test.cpp  svm_sparse_test.cpp  svm_test.cpp
hice-master/test/nn/: CMakeLists.txt  activation_test.cpp  batch_norm_dense_test.cpp  conv_test.cpp  cross_entropy_test.cpp  ctc_loss_test.cpp  dropout_dense_test.cpp  l1_loss_test.cpp  mse_loss_test.cpp  nll_loss_test.cpp  pooling_dense_test.cpp  relu_family_test.cpp  smooth_l1_loss_test.cpp  softmax_cross_entropy_test.cpp  softmax_test.cpp  sparse_cross_entropy_test.cpp  sparse_softmax_cross_entropy_test.cpp
hice-master/test/tools/: compare.h  matmul_ref.h  matrix.h  timer.h
script/: draw_fig.py
src/basic/: factories.c  factories.h  index_utils.c  index_utils.h
src/core/: allocator.c  dispatch.h  log.h  macros.h  status.h  types.c  types.h  utils.h
src/new_ops1/: horizontal_flip.c  horizontal_flip.h  image_transpose.c  image_transpose.h  random_horizontal_flip.c  random_horizontal_flip.h  random_vertical_flip.c  random_vertical_flip.h  rot90.c  rot90.h  vertical_flip.c  vertical_flip.h
src/new_ops2/: grayscale_to_rgb.c  grayscale_to_rgb.h  hsv_to_rgb.c  hsv_to_rgb.h  rgb_to_grayscale.c  rgb_to_grayscale.h  rgb_to_hsv.c  rgb_to_hsv.h  rgb_to_yiq.c  rgb_to_yiq.h  rgb_to_yuv.c  rgb_to_yuv.h  yiq_to_rgb.c  yiq_to_rgb.h  yuv_to_rgb.c  yuv_to_rgb.h
src/new_ops3/: adjust_brightness.c  adjust_brightness.h  adjust_contrast.c  adjust_contrast.h  adjust_gamma.c  adjust_gamma.h  adjust_hue.c  adjust_hue.h  adjust_saturation.c  adjust_saturation.h  image_normalize.c  image_normalize.h  random_brightness.c  random_brightness.h  random_contrast.c  random_contrast.h  random_hue.c  random_hue.h  random_saturation.c  random_saturation.h
src/new_ops4/: center_crop.c  center_crop.h  crop_to_bounding_box.c  crop_to_bounding_box.h  pad_to_bounding_box.c  pad_to_bounding_box.h  random_crop.c  random_crop.h  resize_with_crop_or_pad.c  resize_with_crop_or_pad.h
src/new_ops5/: gaussian_blur.c  gaussian_blur.h  image_gradients.c  image_gradients.h
src/new_ops6/: cross_entropy.c  cross_entropy.h  ctc_loss.c  ctc_loss.h  l1_loss.c  l1_loss.h  mse_loss.c  mse_loss.h  nll_loss.c  nll_loss.h  smooth_l1_loss.c  smooth_l1_loss.h
src/new_ops7/: abs.c  abs.h  elu.c  elu.h  exp.c  exp.h  log.c  log.h  neg.c  neg.h  square.c  square.h
src/new_ops8/: arg_reduce.c  arg_reduce.h  compare.c  compare.h  reduce_max.c  reduce_max.h  reduce_mean.c  reduce_mean.h  reduce_min.c  reduce_min.h  reduce_prod.c  reduce_prod.h  reduce_sum.c  reduce_sum.h  reduce_util.h
src/nn/: attention.c  attention.h  conv.c  conv.h
test/: CMakeLists.txt  abs_test.cpp  adjust_brightness_test.cpp  adjust_contrast_test.cpp  adjust_gamma_test.cpp  adjust_hue_test.cpp  adjust_saturation_test.cpp  argmax_test.cpp  argmin_test.cpp  attention_test.cpp  batch_norm_test.cpp  binary_test.cpp  center_crop_test.cpp  compare.cpp  conv_test.cpp  crop_to_bounding_box_test.cpp  cross_entropy_loss.cpp  ctc_loss_test.cpp  elu_test.cpp  exp_test.cpp  gaussian_blur_test.cpp  grayscale_to_rgb_test.cpp  horizontal_flip_test.cpp  hsv_to_rgb_test.cpp  image_gradients_test.cpp  image_normalize_test.cpp  image_transpose_test.cpp  l1_loss_test.cpp  log_test.cpp  max_test.cpp  min_test.cpp  mse_test.cpp  neg_test.cpp  nll_loss_test.cpp  pad_to_bounding_box_test.cpp  random_brightness_test.cpp  random_contrast_test.cpp  random_crop_test.cpp  random_horizontal_flip_test.cpp  random_hue_test.cpp  (+18 more)
(+323 files in other folders)
