set(hice_test_api_c_srcs_cpu)
set(hice_test_basic_srcs_cpu)
set(hice_test_core_srcs_cpu)
set(hice_test_math_srcs_cpu)
set(hice_test_ml_srcs_cpu)
set(hice_test_nn_srcs_cpu)
set(hice_test_benchmark_srcs_cpu)

add_subdirectory(api_c)
add_subdirectory(basic)
add_subdirectory(core)
add_subdirectory(math)
add_subdirectory(ml)
add_subdirectory(nn)
# add_subdirectory(benchmark)

list(APPEND hice_test_srcs_cpu "${hice_test_api_c_srcs_cpu}")
list(APPEND hice_test_srcs_cpu "${hice_test_basic_srcs_cpu}")
list(APPEND hice_test_srcs_cpu "${hice_test_core_srcs_cpu}")
list(APPEND hice_test_srcs_cpu "${hice_test_math_srcs_cpu}")
list(APPEND hice_test_srcs_cpu "${hice_test_ml_srcs_cpu}")
list(APPEND hice_test_srcs_cpu "${hice_test_nn_srcs_cpu}")

## Build a exe including all test files (exclude from benchmark)
#set(HICE_BUILD_TEST_MAIN ON)
#if(${HICE_BUILD_TEST_MAIN})
#  add_executable(main main.cpp ${hice_test_srcs_cpu})
#  target_link_libraries(main "hice::hice" "hice::gmock")
#endif()

## Build a exe for each test files
# list(APPEND hice_test_srcs_cpu "${hice_test_benchmark_srcs_cpu}")
# foreach(test_src ${hice_test_srcs_cpu})
#   get_filename_component(test_name ${test_src} NAME_WE)
#   hice_register_exe(${test_name} "${test_src}" "test" "hice::hice" "hice::gmock")
# endforeach()
